# FinRAG

./: .dockerignore  .env.example  .gitignore  Dockerfile  EXECUTION_PLAN.md  LICENSE  PROJECT_RULES.md  README.md  README.zh-CN.md  compose.yaml  execution.md  pyproject.toml  vercel.json
backend/: .env.example  pyproject.toml
backend/eval/: agent_eval.py  questions.jsonl  run_eval.py  run_red_team.py
backend/experiments/: _ablation.py  wave3_b_tables.py  wave3_c_hybrid.py  wave3_e_queryrewrite.py  wave3_f_embed_compare.py  wave3_g_section_chunking.py
backend/prompts/: answer_v1.1.txt
backend/sql/: 002_ingest_jobs.sql
backend/src/: __init__.py  agent_lg.py  api.py  cli.py  config.py  cost.py  db.py  embed.py  ingest_jobs.py  llm.py  mcp_server.py  ui.py
backend/tests/: test_hardening.py  test_ingest_jobs.py  test_llm.py  test_qstash_queue.py  test_validation_boundaries.py  test_wave1b.py  test_wave1c.py  test_wave2.py  test_wave4.py  test_wave6.py
data/fixtures/: seed.py
deploy/: entrypoint.sh
eval/: agent_questions.jsonl  metrics.py  mini_eval.py  red_team.jsonl  run_eval.py
eval/reports/: wave1_5_mini_eval.md  wave_1b.md  wave_1c.md  wave_2.md  wave_3a.md  wave_3c.md  wave_3g.md  (+2 more)
experiments/: _keepalive.py  wave3_a_chunking.py  wave3_d_rerank.py  wave4_lg_compare.py
frontend/: .env.example  package-lock.json  package.json  tsconfig.json  vitest.config.ts
frontend/lib/: sse.ts  (+4 more)
infra/: Dockerfile  compose.yaml
prompts/: answer_v1.txt  react_v1.txt
sql/: 001_init.sql  002_ingest_jobs.sql  002_migrate_normalize_documents.sql
src/: agent.py  api.py  cli.py  config.py  cost.py  db.py  embed.py  guardrails.py  ingest.py  ingest_jobs.py  llm.py  mcp_server.py  obs.py  qstash_queue.py  query_rewrite.py  rag.py  rerank.py  retrieve.py  ui.py
tests/: test_hardening.py  test_ingest_jobs.py  test_llm.py  test_qstash_queue.py  test_wave1a.py  test_wave1b.py  test_wave1c.py  test_wave3.py  test_wave5.py  test_wave6.py
(+55 files in other folders)
