[project]
name = "finrag"
version = "0.0.1"
description = "RAG + agent system over SEC filings (10-K / 10-Q / earnings calls)."
readme = "README.md"
requires-python = ">=3.11,<3.13"
dependencies = [
    "anthropic>=0.39.0",
    "click>=8.0",
    "docling>=2.104.0",
    "fastapi>=0.115",
    "google-genai>=0.3.0",
    "langfuse>=3.0",
    "langgraph>=1.2.6",
    "mcp>=1.28.1",
    "openai>=1.50.0",
    "psycopg-pool>=3.3.1",
    "psycopg[binary]>=3.2",
    "pydantic>=2.0",
    "pydantic-settings>=2.14.2",
    "python-dotenv>=1.0.1",
    "slowapi>=0.1.10",
    "sse-starlette>=2.1",
    "streamlit>=1.40",
    "tiktoken>=0.7",
    "uvicorn[standard]>=0.30",
]

[project.scripts]
finrag = "src.cli:cli"

[dependency-groups]
dev = [
    "pytest>=8.3",
    "ruff>=0.7.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]

[tool.vercel]
entrypoint = "src.api:app"
